--- a/css/lol.css
+++ b/css/lol.css
@@ -9,6 +9,9 @@
 	    	border:2px solid black;
 	    	padding:10px 10px 10px 10px;
 	    	font-family: sans-serif; 
+	    	font-size: medium;
+	    	font-weight: bold;
+	    	line-height: 2.0em;
 	    }
 	    p{
 	    	color: maroon;
@@ -22,10 +25,58 @@
 	    h1{
 	    	border-bottom: 5px double;
 	    	color:#121212;
+
 	    }
 	    a.tolol{
 	    	/*font-family:Fantasy;*/
 	    	font-family:myfirstFont;
 	    	font-size:200%;
 	    	color:blue;
-	    }   }
+	    }   
+	    h2.test{
+	    	font-family: sans-serif;
+	    	font-style: italic;
+	    }
+	    blockquote{
+	    	font-family: sans-serif;
+	    	font-style: italic;
+	    }
+	    p.old{
+	    	font-family: sans-serif;
+	    	text-decoration: underline-overline;
+	    }
+      .intro1{
+        font-size: 1.5em;
+      	border-color: black;
+      	border-width: 2px;
+      	border-style: solid;
+      	background-color:#708090;
+      	padding:25px;
+      	margin:30px;
+      	line-height:1.5em;
+      	font-family: sans-serif;
+      	background-image: url(../images/background3.jpg) ;
+      	background-repeat:no-repeat;
+      	background-position: top left ;
+	    margin-right:69px;
+      	padding-left: 100px;
+      	padding-bottom: 270px;
+      	padding-top: 50px;
+      	border-style:dashed;
+      
+      	border-radius: 15px;
+      	border-color: #888888;
+      }                         
+      .im1{
+        border-radius: 15px;
+        margin-right: 15px;
+        margin-top:15px;
+        margin-bottom: 25px;
+        margin-left: 25px;
+      }
+      .im2{
+      	border-radius: 15px;
+      	margin-left: 15px;
+      	margin-top:15px;
+      	margin-bottom: 25px;
+      }
